[gd_scene load_steps=2 format=3 uid="uid://bwkgogcak22kl"]

[ext_resource type="Script" path="res://scripts/GameOver.gd" id="1_xrciu"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_xrciu")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(288, 192)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.117647, 0.117647, 0.117647, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_left = 11.0
offset_top = 11.0
offset_right = 277.0
offset_bottom = 181.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(266, 170)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Control2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Game Over" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Retry" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Try Again"

[node name="Quit to Menu" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Back to Menu"

[node name="music_player" type="AudioStreamPlayer2D" parent="."]
attenuation = 0.307786

[connection signal="pressed" from="CenterContainer/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit to Menu" to="." method="_on_quit_to_menu_pressed"]
